Refactor to support different Post and Page view format with documentation.
Testing:
| Source  | Dest | Save | View | Publish | Trash | Worked? |
|---------+------+------+------+---------+-------+---------|
| Buffer  | Post | Y    | Y    | Y       | Y     | Y       |
| Buffer  | Page | Y    | Y    | Y       | Y     | Y       |
| Subtree | Post | Y    | Y    | Y       | Y     | Y       |
| Subtree | Page | Y    | Y    | Y       | Y     | Y       |

--- a/HISTORY.org
+++ b/HISTORY.org
@@ -90,6 +90,9 @@
   - Documents WordPress version
   - Further document Source Entries to Destinations in WordPress
   - Move to new org-make-toc format
+  - Refactor to support different Post and Page view format w/Docs
+    Consequently ~org2blog-buffer-post-or-page-view~ and
+    ~org2blog-subtree-post-or-page-view~ are unusable.
 
 * v1.0
 ** v1.0.00
