--- a/docs/DEVELOPMENT.org
+++ b/docs/DEVELOPMENT.org
@@ -6,11 +6,10 @@ Org2Blog Developer Documentation.
 
 * Table of Contents
 :PROPERTIES:
-:TOC:      :include all
+:TOC:      :include all :ignore (this)
 :END:
 :CONTENTS:
 - [[#about][About]]
-- [[#table-of-contents][Table of Contents]]
 - [[#getting-started-with-development][Getting Started With Development]]
 - [[#package-questions-and-answers][Package Questions And Answers]]
   - [[#why-does-org2blog-talk-about-save-view-publish-and-trash-so-much][Why Does Org2Blog Talk About Save, View, Publish, And Trash So Much?]]
