Adds table of contents

--- a/HISTORY.org
+++ b/HISTORY.org
@@ -1,3 +1,32 @@
+* About
+
+Documents notable release changes.
+
+* Table of Contents
+:PROPERTIES:
+:TOC:      :include all :ignore (this)
+:END:
+:CONTENTS:
+- [[#about][About]]
+- [[#v11-inky-hand][v1.1 "Inky Hand"]]
+  - [[#v1100][v1.1.00]]
+    - [[#users][Users]]
+    - [[#developers][Developers]]
+    - [[#maintainers][Maintainers]]
+    - [[#fixes][Fixes]]
+  - [[#v1101-v1112][v1.1.01-v1.1.12]]
+  - [[#v1113-][v1.1.13-]]
+- [[#v10][v1.0]]
+  - [[#v1000][v1.0.00]]
+  - [[#v1001][v1.0.01]]
+  - [[#v1002][v1.0.02]]
+  - [[#v1003][v1.0.03]]
+- [[#v09][v0.9]]
+  - [[#v0901][v0.9.01]]
+  - [[#v0902][v0.9.02]]
+  - [[#v0903][v0.9.03]]
+:END:
+
 * v1.1 "Inky Hand"
 ** v1.1.00
 *** Users
