--- a/HISTORY.org
+++ b/HISTORY.org
@@ -126,6 +126,8 @@ Documents notable release changes.
     Hydra creates an exceeding number of non-human viewed docstrings
     so no point warning.
   - Document Parent Page support
+  - v1.1.14
+    - Add spellchecking
 
 * v1.0
 ** v1.0.00
