--- a/README.org
+++ b/README.org
@@ -29,6 +29,7 @@ Blog from Org mode to WordPress.
     - [[#helping-yourself-to-the-basics][Helping Yourself To The Basics]]
     - [[#writing-more-after-you-have-settled-into-the-software][Writing More After You Have "Settled Into" The Software]]
       - [[#how-do-you-spell-that-again][How do you spell that again?]]
+      - [[#have-you-heard-your-new-post][Have you heard your new post?]]
       - [[#your-second-buffer-post][Your Second Buffer Post]]
       - [[#your-first-buffer-page][Your First Buffer Page]]
     - [[#store-multiple-entries-in-one-file][Store Multiple Entries In One File]]
@@ -318,6 +319,26 @@ Run it like this:
 - Step though your spelling corrections
 - Post happily!
 
+***** Have you heard your new post?
+
+Reading your post out loud completely changes how you think about it. Specifically it makes it easier to find ways to make it better for the reader. Here are some of the most common challenges resolved and improvements possible found by reading out loud:
+
+- The ideas in your head make total sense. However that doesn't mean that you wrote them down in the correct order―the readers might not be able to make sense of it
+- You might see the context of your ideas but haven't provided enough for the reader to make sense of them.
+- Humans can catch spelling and grammatical errors that computers can not. This one is always surprising and gives you a great feeling when you do.
+- Reveals the tone of the paper. Does it reflect the tone you intended? Is it appropriate for the content?
+- For much more on the /entire/ topic please read [[https://writingcenter.unc.edu/wp-content/uploads/sites/346/2012/09/Reading-Aloud-The-Writing-Center.pdf][Reading Aloud]] by The Writing Center • University of North Carolina at Chapel Hill. Consider this a *MUST READ*.
+
+If you are working with Org2Blog then what is the best way to read your post out loud? Using a text-to-speech app is how. The most important part is finding a voice that you like.
+
+Find every text-to-speech voice out there. Listen to all of them. Use different kinds of content. Adjust the speed and tone. Listen over days. In time you will get a few top picks. You might find different voices for different kind of content. For example one voice for reading technical content and another for reading thoughts and reflection. The goal is to get you out of your head so you can hear someone else's voice. Voice selection is critical. What is the best way to use and do it?
+
+First: you can probably use the built in text-to-speech technology on your computer. On macOS for example it is built in. There are a number of apps out there to perform text-to-speech too.
+
+Second: [[https://www.cereproc.com/en][CereProc]] voices, along with all of their other offerings, are well-respected both in the user and commercial user-space. They are reasonably priced and have a voice to suit everyone.
+
+Try listening to all of your writing. Listen to your posts, letters, essays and everything you can whether it is in Org2Blog or not. It will make you a better writer and pay off for your entire writing life.
+
 ***** Your Second Buffer Post
 
 Perhaps you know some defaults you want for every kind of Entry. When you are ready configure them see these variables and functions:
@@ -337,10 +358,10 @@ Perhaps you know some defaults you want for every kind of Entry. When you are re
 With your configuration ready, start creating the Post.
 
 Start by creating a =UI [New Buffer]=. A template populates your Entry. When you =UI [Login]= Org2Blog learns about your Categories, Tags, and Pages. Position the cursor on one of those lines and =UI [Complete]= and either choose a value or complete a value that you began typing. If you want one, you can add a =#+DESCRIPTION= and a =#+PERMALINK= too.
-
+d
 Please note that WordPress has a slightly unexpected behavior when completing Categories and Tags. Although Org2Blog can complete unused Categories, it cannot complete unused Tags. Although the unused Tag exists on the blog, it still can't be completed while writing. Hiding unused tags is normal WordPress behavior for now.
 
-Org2Blog includes some helpers for inserting content into your Entry under the =UI [“Insert A”]= menu:
+O rg2Blog includes some helpers for inserting content into your Entry under the =UI [“Insert A”]= menu:
 
 - =UI [More Tag]=: The WordPress "Read More" tag. Org2Blog will ask if you want to use a message inside of it, too.
 - =UI [MathJax Shortcode]=: If you want to use [[https://www.mathjax.org/][MathJax]], this lets you do it.
